--- a/제이티렌트카_rev3.html
+++ b/제이티렌트카_rev3.html
@@ -6,7 +6,7 @@
     <title>제이티렌트카 - 용인 렌터카</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        header { background: #FFD700; color: #fff; padding: 15px; text-align: center; }
+        header { background: #333; color: #fff; padding: 15px; text-align: center; }
         nav { display: flex; justify-content: center; background: #444; padding: 10px; }
         nav a { color: white; text-decoration: none; padding: 10px 20px; }
         section { padding: 20px; text-align: center; }
@@ -19,7 +19,10 @@
 </head>
 <body>
     <header>
+        <div class="header-container">
         <h1>제이티렌트카</h1>
+        <img src="https://raw.githubusercontent.com/jtrent7777/jt-rentcar/main/Main.gif" alt="메인 이미지" class="main-logo">
+    </div>
         <p>용인, 수원, 평택, 성남, 분당, 오산, 광주, 서울 등 렌트 전문업체</p>
         <p>전 차종 금연차량 | 용인지역 무상배차</p>
     </header>
