--- a/제이티렌트카_rev3.html
+++ b/제이티렌트카_rev3.html
@@ -25,6 +25,22 @@
     </div>
         <p>용인, 수원, 평택, 성남, 분당, 오산, 광주, 서울 등 렌트 전문업체</p>
         <p>전 차종 금연차량 | 용인지역 무상배차</p>
+        <style>
+        .header-container {
+        display: flex;
+        align-items: center; /* 세로 정렬 맞추기 */
+        justify-content: center; /* 가운데 정렬 */
+        gap: 10px; /* 이미지와 텍스트 사이 간격 */
+        }
+        .main-logo {
+        width: 50px; /* 원하는 크기로 조절 */
+        height: auto;
+        }
+    h1 {
+        margin: 0;
+        font-size: 2em; /* 글자 크기 조절 */
+    }
+</style>
     </header>
     <nav>
         <a href="#home">홈</a>
