--- a/제이티렌트카_rev3.html
+++ b/제이티렌트카_rev3.html
@@ -34,7 +34,7 @@
         }
         .main-logo {
         width: 50px; /* 원하는 크기로 조절 */
-        height: auto;
+        height: 50px;
         }
     h1 {
         margin: 0;
